Moved images to online host

--- a/application/templates/art_projects.html
+++ b/application/templates/art_projects.html
@@ -8,38 +8,39 @@
             <h2 class="card-title" style="color: white;"> Oil Paintings </h2>
         </div>
         <div class="card-body">
+            <!-- images hosted on https://imgbb.com -->
             <div class="row">
                 <div class="col-lg-4 custom-thumbnail">
-                    <a href="{% static 'images/Arts/OilPainting/IMG_1987.JPG' %}" class="fancybox" rel="ligthbox">
-                        <img  src="{% static 'images/Arts/compressed/IMG_1987-min.JPG' %}" class="zoom img-fluid art-img"  alt="">
+                    <a href="https://i.ibb.co/RTVWwDs/IMG-1987.jpg" class="fancybox" rel="ligthbox">
+                        <img  src="https://i.ibb.co/rcY440Y/IMG-1987-min.jpg" class="zoom img-fluid art-img"  alt="">
                     </a>
                 </div>
                 <div class="col-lg-4 custom-thumbnail">
-                    <a href="{% static 'images/Arts/OilPainting/IMG_1988.JPG' %}" class="fancybox" rel="ligthbox">
-                        <img  src="{% static 'images/Arts/compressed/IMG_1988-min.JPG' %}" class="zoom img-fluid art-img"  alt="">
+                    <a href="https://i.ibb.co/3frv8c9/IMG-1988.jpg" class="fancybox" rel="ligthbox">
+                        <img  src="https://i.ibb.co/ys4TSrK/IMG-1988-min.jpg" class="zoom img-fluid art-img"  alt="">
                     </a>
                 </div>
                 <div class="col-lg-4 custom-thumbnail">
-                    <a href="{% static 'images/Arts/OilPainting/IMG_1991.JPG' %}" class="fancybox" rel="ligthbox">
-                        <img  src="{% static 'images/Arts/compressed/IMG_1991-min.JPG' %}" class="zoom img-fluid art-img"  alt="">
+                    <a href="https://i.ibb.co/wphS8K9/IMG-1991.jpg" class="fancybox" rel="ligthbox">
+                        <img  src="https://i.ibb.co/My0dgF3/IMG-1991-min.jpg" class="zoom img-fluid art-img"  alt="">
                     </a>
                 </div>
                 <div class="col-lg-4 custom-thumbnail">
-                    <a href="{% static 'images/Arts/OilPainting/IMG_1990.JPG' %}" class="fancybox" rel="ligthbox">
-                        <img  src="{% static 'images/Arts/compressed/IMG_1990-min.JPG' %}" class="zoom img-fluid art-img column-img"  alt="">
+                    <a href="https://i.ibb.co/1nVhDSf/IMG-1990.jpg" class="fancybox" rel="ligthbox">
+                        <img  src="https://i.ibb.co/ydV3HT5/IMG-1990-min.jpg" class="zoom img-fluid art-img column-img"  alt="">
                     </a>
-                    <a href="{% static 'images/Arts/OilPainting/IMG_1994.JPG' %}" class="fancybox" rel="ligthbox">
-                        <img  src="{% static 'images/Arts/compressed/IMG_1994-min.JPG' %}" class="zoom img-fluid art-img"  alt="">
-                    </a>
-                </div>
-                <div class="col-lg-4 custom-thumbnail">
-                    <a href="{% static 'images/Arts/OilPainting/IMG_1992.JPG' %}" class="fancybox" rel="ligthbox">
-                        <img  src="{% static 'images/Arts/compressed/IMG_1992-min.JPG' %}" class="zoom img-fluid art-img"  alt="">
+                    <a href="https://i.ibb.co/Vw9vVtX/IMG-1994.jpg" class="fancybox" rel="ligthbox">
+                        <img  src="https://i.ibb.co/4jHzj5D/IMG-1994-min.jpg" class="zoom img-fluid art-img"  alt="">
                     </a>
                 </div>
                 <div class="col-lg-4 custom-thumbnail">
-                    <a href="{% static 'images/Arts/OilPainting/IMG_1993.JPG' %}" class="fancybox" rel="ligthbox">
-                        <img  src="{% static 'images/Arts/compressed/IMG_1993-min.JPG' %}" class="zoom img-fluid art-img"  alt="">
+                    <a href="https://i.ibb.co/X84KPGj/IMG-1992.jpg" class="fancybox" rel="ligthbox">
+                        <img  src="https://i.ibb.co/tH0B61g/IMG-1992-min.jpg" class="zoom img-fluid art-img"  alt="">
+                    </a>
+                </div>
+                <div class="col-lg-4 custom-thumbnail">
+                    <a href="https://i.ibb.co/qsn3DLj/IMG-1993.jpg" class="fancybox" rel="ligthbox">
+                        <img  src="https://i.ibb.co/pf1kWsV/IMG-1993-min.jpg" class="zoom img-fluid art-img"  alt="">
                     </a>
                 </div>
            </div>
@@ -54,48 +55,48 @@
         <div class="card-body">
             <div class="row">
                 <div class="col-lg-4 custom-thumbnail">
-                    <a href="{% static 'images/Arts/Sketch/sketch1.jpeg' %}" class="fancybox" rel="ligthbox">
-                        <img  src="{% static 'images/Arts/compressed/sketch1-min.jpeg' %}" class="zoom img-fluid art-img"  alt="">
+                    <a href="https://i.ibb.co/zVnMyfs/origin-gallery-uid-91768507-7-E74-4-B0-D-AD2-E-D7-AB0750-CFBC-1626914757996-source-other.jpg" class="fancybox" rel="ligthbox">
+                        <img  src="https://i.ibb.co/9pJhCCn/sketch1-min.jpg" class="zoom img-fluid art-img"  alt="">
                     </a>
                 </div>
                 <div class="col-lg-4 custom-thumbnail">
-                    <a href="{% static 'images/Arts/Sketch/sketch2.jpeg' %}" class="fancybox" rel="ligthbox">
-                        <img  src="{% static 'images/Arts/compressed/sketch2-min.jpeg' %}" class="zoom img-fluid art-img"  alt="">
+                    <a href="https://i.ibb.co/JBphP2T/origin-gallery-uid-91768507-7-E74-4-B0-D-AD2-E-D7-AB0750-CFBC-1626914929082-source-other.jpg" class="fancybox" rel="ligthbox">
+                        <img  src="https://i.ibb.co/GJzH13p/sketch2-min.jpg" class="zoom img-fluid art-img"  alt="">
                     </a>
                 </div>
                 <div class="col-lg-4 custom-thumbnail">
-                    <a href="{% static 'images/Arts/Sketch/sketch3.jpeg' %}" class="fancybox" rel="ligthbox">
-                        <img  src="{% static 'images/Arts/compressed/sketch3-min.jpeg' %}" class="zoom img-fluid art-img"  alt="">
+                    <a href="https://i.ibb.co/KrLHYx5/origin-gallery-uid-91768507-7-E74-4-B0-D-AD2-E-D7-AB0750-CFBC-1626914895395-source-other.jpg" class="fancybox" rel="ligthbox">
+                        <img  src="https://i.ibb.co/KzQgS5F/sketch3-min.jpg" class="zoom img-fluid art-img"  alt="">
                     </a>
                 </div>
                 <div class="col-lg-4 custom-thumbnail">
-                    <a href="{% static 'images/Arts/Sketch/sketch4.jpeg' %}" class="fancybox" rel="ligthbox">
-                        <img  src="{% static 'images/Arts/compressed/sketch4-min.jpeg' %}" class="zoom img-fluid art-img"  alt="">
+                    <a href="https://i.ibb.co/z4pfLqL/origin-gallery-uid-91768507-7-E74-4-B0-D-AD2-E-D7-AB0750-CFBC-1626914971101-source-other.jpg" class="fancybox" rel="ligthbox">
+                        <img  src="https://i.ibb.co/Snrsb5G/sketch4-min.jpg" class="zoom img-fluid art-img"  alt="">
                     </a>
                 </div>
                 <div class="col-lg-4 custom-thumbnail">
-                    <a href="{% static 'images/Arts/Sketch/sketch5.jpeg' %}" class="fancybox" rel="ligthbox">
-                        <img  src="{% static 'images/Arts/compressed/sketch5-min.jpeg' %}" class="zoom img-fluid art-img"  alt="">
+                    <a href="https://i.ibb.co/BgZDX9G/origin-gallery-uid-91768507-7-E74-4-B0-D-AD2-E-D7-AB0750-CFBC-1626914837130-source-other.jpg" class="fancybox" rel="ligthbox">
+                        <img  src="https://i.ibb.co/Rb5yd5Q/sketch5-min.jpg" class="zoom img-fluid art-img"  alt="">
                     </a>
                 </div>
                 <div class="col-lg-4 custom-thumbnail">
-                    <a href="{% static 'images/Arts/Sketch/sketch6.jpeg' %}" class="fancybox" rel="ligthbox">
-                        <img  src="{% static 'images/Arts/compressed/sketch6-min.jpeg' %}" class="zoom img-fluid art-img"  alt="">
+                    <a href="https://i.ibb.co/Nm28PXz/origin-gallery-uid-91768507-7-E74-4-B0-D-AD2-E-D7-AB0750-CFBC-1626914793130-source-other.jpg" class="fancybox" rel="ligthbox">
+                        <img  src="https://i.ibb.co/Jk89CRy/sketch6-min.jpg" class="zoom img-fluid art-img"  alt="">
                     </a>
                 </div>
                 <div class="col-lg-4 custom-thumbnail">
-                    <a href="{% static 'images/Arts/Sketch/sketch7.jpeg' %}" class="fancybox" rel="ligthbox">
-                        <img  src="{% static 'images/Arts/compressed/sketch7-min.jpeg' %}" class="zoom img-fluid art-img"  alt="">
+                    <a href="https://i.ibb.co/HTmZ56N/origin-gallery-uid-91768507-7-E74-4-B0-D-AD2-E-D7-AB0750-CFBC-1626914876002-source-other.jpg" class="fancybox" rel="ligthbox">
+                        <img  src="https://i.ibb.co/xsGbJtr/sketch7-min.jpg" class="zoom img-fluid art-img"  alt="">
                     </a>
                 </div>
                 <div class="col-lg-4 custom-thumbnail">
-                    <a href="{% static 'images/Arts/Sketch/sketch8.jpeg' %}" class="fancybox" rel="ligthbox">
-                        <img  src="{% static 'images/Arts/compressed/sketch8-min.jpeg' %}" class="zoom img-fluid art-img"  alt="">
+                    <a href="https://i.ibb.co/fGhxpJM/origin-gallery-uid-91768507-7-E74-4-B0-D-AD2-E-D7-AB0750-CFBC-1626914814427-source-other.jpg" class="fancybox" rel="ligthbox">
+                        <img  src="https://i.ibb.co/RCGYyG0/sketch8-min.jpg" class="zoom img-fluid art-img"  alt="">
                     </a>
                 </div>
                 <div class="col-lg-4 custom-thumbnail">
-                    <a href="{% static 'images/Arts/Sketch/sketch9.jpeg' %}" class="fancybox" rel="ligthbox">
-                        <img  src="{% static 'images/Arts/compressed/sketch9-min.jpeg' %}" class="zoom img-fluid art-img"  alt="">
+                    <a href="https://i.ibb.co/JcsMFyT/origin-gallery-uid-91768507-7-E74-4-B0-D-AD2-E-D7-AB0750-CFBC-1626914953102-source-other.jpg" class="fancybox" rel="ligthbox">
+                        <img  src="https://i.ibb.co/64VWsH4/sketch9-min.jpg" class="zoom img-fluid art-img"  alt="">
                     </a>
                 </div>
            </div>
@@ -110,33 +111,33 @@
         <div class="card-body">
             <div class="row">
                 <div class="col-lg-4 custom-thumbnail">
-                    <a href="{% static 'images/Arts/Digital/IMG_2019.JPG' %}" class="fancybox" rel="ligthbox">
-                        <img  src="{% static 'images/Arts/compressed/IMG_2019-min.JPG' %}" class="zoom img-fluid art-img column-img"  alt="">
+                    <a href="https://i.ibb.co/pd7hcNg/IMG-2019.jpg" class="fancybox" rel="ligthbox">
+                        <img  src="https://i.ibb.co/ccgfBBP/IMG-2019-min.jpg" class="zoom img-fluid art-img column-img"  alt="">
                     </a>
-                    <a href="{% static 'images/Arts/Digital/IMG_2016.JPG' %}" class="fancybox" rel="ligthbox">
-                        <img  src="{% static 'images/Arts/compressed/IMG_2016-min.JPG' %}" class="zoom img-fluid art-img column-img"  alt="">
+                    <a href="https://i.ibb.co/ck59d1Y/IMG-2016.jpg" class="fancybox" rel="ligthbox">
+                        <img  src="https://i.ibb.co/RgtRyPR/IMG-2016-min.jpg" class="zoom img-fluid art-img column-img"  alt="">
                     </a>
-                    <a href="{% static 'images/Arts/Digital/IMG_2022.JPG' %}" class="fancybox" rel="ligthbox">
-                        <img  src="{% static 'images/Arts/compressed/IMG_2022-min.JPG' %}" class="zoom img-fluid art-img"  alt="">
-                    </a>
-                </div>
-                <div class="col-lg-4 custom-thumbnail">
-                    <a href="{% static 'images/Arts/Digital/IMG_2017.JPG' %}" class="fancybox" rel="ligthbox">
-                        <img  src="{% static 'images/Arts/compressed/IMG_2017-min.JPG' %}" class="zoom img-fluid art-img column-img"  alt="">
-                    </a>
-                    <a href="{% static 'images/Arts/Digital/IMG_2021.JPG' %}" class="fancybox" rel="ligthbox">
-                        <img  src="{% static 'images/Arts/compressed/IMG_2021-min.JPG' %}" class="zoom img-fluid art-img column-img"  alt="">
-                    </a>
-                    <a href="{% static 'images/Arts/Digital/IMG_2018.JPG' %}" class="fancybox" rel="ligthbox">
-                        <img  src="{% static 'images/Arts/compressed/IMG_2018-min.JPG' %}" class="zoom img-fluid art-img"  alt="">
+                    <a href="https://i.ibb.co/4828yTM/IMG-2022.jpg" class="fancybox" rel="ligthbox">
+                        <img  src="https://i.ibb.co/CzxNx01/IMG-2022-min.jpg" class="zoom img-fluid art-img"  alt="">
                     </a>
                 </div>
                 <div class="col-lg-4 custom-thumbnail">
-                    <a href="{% static 'images/Arts/Digital/IMG_2023.JPG' %}" class="fancybox" rel="ligthbox">
-                        <img  src="{% static 'images/Arts/compressed/IMG_2023-min.JPG' %}" class="zoom img-fluid art-img column-img"  alt="">
+                    <a href="https://i.ibb.co/DptnmQJ/IMG-2017.jpg" class="fancybox" rel="ligthbox">
+                        <img  src="https://i.ibb.co/ZSg77KM/IMG-2017-min.jpg" class="zoom img-fluid art-img column-img"  alt="">
                     </a>
-                    <a href="{% static 'images/Arts/Digital/IMG_2020.JPG' %}" class="fancybox" rel="ligthbox">
-                        <img  src="{% static 'images/Arts/compressed/IMG_2020-min.JPG' %}" class="zoom img-fluid art-img"  alt="">
+                    <a href="https://i.ibb.co/Mhhnt67/IMG-2021.jpg" class="fancybox" rel="ligthbox">
+                        <img  src="https://i.ibb.co/xYjKZ1Q/IMG-2021-min.jpg" class="zoom img-fluid art-img column-img"  alt="">
+                    </a>
+                    <a href="https://i.ibb.co/wQTNq7B/IMG-2018.jpg" class="fancybox" rel="ligthbox">
+                        <img  src=https://i.ibb.co/4f6cjR8/IMG-2018-min.jpg" class="zoom img-fluid art-img"  alt="">
+                    </a>
+                </div>
+                <div class="col-lg-4 custom-thumbnail">
+                    <a href="https://i.ibb.co/h2x1ssS/IMG-2023.jpg" class="fancybox" rel="ligthbox">
+                        <img  src="https://i.ibb.co/58CWPpg/IMG-2023-min.jpg" class="zoom img-fluid art-img column-img"  alt="">
+                    </a>
+                    <a href="https://i.ibb.co/bN8HJ4h/IMG-2020.jpg" class="fancybox" rel="ligthbox">
+                        <img  src="https://i.ibb.co/3T1HYDP/IMG-2020-min.jpg" class="zoom img-fluid art-img"  alt="">
                     </a>
                 </div>
            </div>
@@ -150,24 +151,24 @@
         <div class="card-body">
             <div class="row">
                 <div class="col-lg-4 custom-thumbnail">
-                    <a href="{% static 'images/Arts/Others/IMG_2024.JPG' %}" class="fancybox" rel="ligthbox">
-                        <img  src="{% static 'images/Arts/compressed/IMG_2024-min.JPG' %}" class="zoom img-fluid art-img column-img"  alt="">
+                    <a href="https://i.ibb.co/Cb86Bd0/IMG-2024.jpg" class="fancybox" rel="ligthbox">
+                        <img  src="https://i.ibb.co/z4TDhCB/IMG-2024-min.jpg" class="zoom img-fluid art-img column-img"  alt="">
                     </a>
-                    <a href="{% static 'images/Arts/Others/IMG_2006.JPG' %}" class="fancybox" rel="ligthbox">
-                        <img  src="{% static 'images/Arts/compressed/IMG_2006-min.JPG' %}" class="zoom img-fluid art-img"  alt="">
-                    </a>
-                </div>
-                <div class="col-lg-4 custom-thumbnail">
-                    <a href="{% static 'images/Arts/Others/IMG_2025.JPG' %}" class="fancybox" rel="ligthbox">
-                        <img  src="{% static 'images/Arts/compressed/IMG_2025-min.JPG' %}" class="zoom img-fluid art-img column-img"  alt="">
-                    </a>
-                    <a href="{% static 'images/Arts/Others/IMG_2027.JPG' %}" class="fancybox" rel="ligthbox">
-                        <img  src="{% static 'images/Arts/compressed/IMG_2027-min.JPG' %}" class="zoom img-fluid art-img"  alt="">
+                    <a href="https://i.ibb.co/8jvgX8q/IMG-2006.jpg" class="fancybox" rel="ligthbox">
+                        <img  src="https://i.ibb.co/k3W99tH/IMG-2006-min.jpg" class="zoom img-fluid art-img"  alt="">
                     </a>
                 </div>
                 <div class="col-lg-4 custom-thumbnail">
-                    <a href="{% static 'images/Arts/Others/IMG_2026.JPG' %}" class="fancybox" rel="ligthbox">
-                        <img  src="{% static 'images/Arts/compressed/IMG_2026-min.JPG' %}" class="zoom img-fluid art-img"  alt="">
+                    <a href="https://i.ibb.co/PDYbG3K/IMG-2025.jpg" class="fancybox" rel="ligthbox">
+                        <img  src="https://i.ibb.co/59r2605/IMG-2025-min.jpg" class="zoom img-fluid art-img column-img"  alt="">
+                    </a>
+                    <a href="https://i.ibb.co/YQBSz4d/IMG-2027.jpg" class="fancybox" rel="ligthbox">
+                        <img  src="https://i.ibb.co/8NR6Xtp/IMG-2027-min.jpg" class="zoom img-fluid art-img"  alt="">
+                    </a>
+                </div>
+                <div class="col-lg-4 custom-thumbnail">
+                    <a href="https://i.ibb.co/jhqG6mD/IMG-2026.jpg" class="fancybox" rel="ligthbox">
+                        <img  src="https://i.ibb.co/jrXYjYC/IMG-2026-min.jpg" class="zoom img-fluid art-img"  alt="">
                     </a>
                 </div>
             </div>
