--- a/application/templates/home.html
+++ b/application/templates/home.html
@@ -180,11 +180,11 @@
             <div class="row d-flex justify-content-center" style="margin-bottom: 2vh;">
                 <div class="col-lg-4 custom-thumbnail">
                     <div class="card project-card zoom">
-                        <img  src="{% static 'images/Arts/OilPainting/IMG_1991.JPG' %}" class="img-fluid card-img"  alt="">
+                        <img  src="https://i.ibb.co/wphS8K9/IMG-1991.jpg" class="img-fluid card-img"  alt="">
                         <div class="card-body">
                             <h5 class="card-title">Oil Painting</h5>
                         </div>
-                        <a href="{% static 'images/Arts/OilPainting/IMG_1991.JPG' %}" class="fancybox" rel="ligthbox">
+                        <a href="https://i.ibb.co/wphS8K9/IMG-1991.jpg" class="fancybox" rel="ligthbox">
                             <div class="hover-overlay"></div>
                         </a>
                     </div>
@@ -192,11 +192,11 @@
 
                 <div class="col-lg-4 custom-thumbnail">
                     <div class="card project-card zoom">
-                        <img  src="{% static 'images/Arts/Sketch/sketch3.jpeg' %}" class="img-fluid card-img"  alt="">
+                        <img  src="https://i.ibb.co/KrLHYx5/origin-gallery-uid-91768507-7-E74-4-B0-D-AD2-E-D7-AB0750-CFBC-1626914895395-source-other.jpg" class="img-fluid card-img"  alt="">
                         <div class="card-body">
                             <h5 class="card-title">Sketching</h5>
                         </div>
-                        <a href="{% static 'images/Arts/Sketch/sketch3.jpeg' %}" class="fancybox" rel="ligthbox">
+                        <a href="https://i.ibb.co/KrLHYx5/origin-gallery-uid-91768507-7-E74-4-B0-D-AD2-E-D7-AB0750-CFBC-1626914895395-source-other.jpg" class="fancybox" rel="ligthbox">
                             <div class="hover-overlay"></div>
                         </a>
                     </div>
@@ -204,11 +204,11 @@
 
                 <div class="col-lg-4 custom-thumbnail">
                     <div class="card project-card zoom">
-                        <img  src="{% static 'images/Arts/Digital/IMG_2019.JPG' %}" class="img-fluid card-img"  alt="">
+                        <img  src="https://i.ibb.co/pd7hcNg/IMG-2019.jpg" class="img-fluid card-img"  alt="">
                         <div class="card-body">
                             <h5 class="card-title">Digital Art</h5>
                         </div>
-                        <a href="{% static 'images/Arts/Digital/IMG_2019.JPG' %}" class="fancybox" rel="ligthbox">
+                        <a href="https://i.ibb.co/pd7hcNg/IMG-2019.jpg" class="fancybox" rel="ligthbox">
                             <div class="hover-overlay"></div>
                         </a>
                     </div>
@@ -216,11 +216,11 @@
 
                 <div class="col-lg-4 custom-thumbnail">
                     <div class="card project-card zoom">
-                        <img  src="{% static 'images/Arts/Others/IMG_2006.JPG' %}" class="img-fluid card-img"  alt="">
+                        <img  src="https://i.ibb.co/8jvgX8q/IMG-2006.jpg" class="img-fluid card-img"  alt="">
                         <div class="card-body">
                             <h5 class="card-title">Watercolor Painting</h5>
                         </div>
-                        <a href="{% static 'images/Arts/Others/IMG_2006.JPG' %}" class="fancybox" rel="ligthbox">
+                        <a href="https://i.ibb.co/8jvgX8q/IMG-2006.jpg" class="fancybox" rel="ligthbox">
                             <div class="hover-overlay"></div>
                         </a>
                     </div>
@@ -228,11 +228,11 @@
 
                 <div class="col-lg-4 custom-thumbnail">
                     <div class="card project-card zoom">
-                        <img  src="{% static 'images/Arts/Others/IMG_2026.JPG' %}" class="img-fluid card-img"  alt="">
+                        <img  src="https://i.ibb.co/jhqG6mD/IMG-2026.jpg" class="img-fluid card-img"  alt="">
                         <div class="card-body">
                             <h5 class="card-title">Color Pencil Sketching</h5>
                         </div>
-                        <a href="{% static 'images/Arts/Others/IMG_2026.JPG' %}" class="fancybox" rel="ligthbox">
+                        <a href="https://i.ibb.co/jhqG6mD/IMG-2026.jpg" class="fancybox" rel="ligthbox">
                             <div class="hover-overlay"></div>
                         </a>
                     </div>
